added bases for the other pages, tried working on the image carousel (unsuccessful), added a couple of test images for the carousel (subject for removal)

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,7 +9,15 @@
 </head>
  <body>
     <header>
-
+        <section>
+            <p></p>
+        </section>
+        <section>
+            <a href="index.html">Home</a>
+            <p>About</p>
+            <p>Projects</p>
+            <a href="contact.html">Contact</a>
+        </section>
     </header>
     
     <main>
@@ -48,7 +56,14 @@
     </main>
 
     <footer>
-        
+        <section>
+            <p>contact</p>
+            <ul class="">
+                <li>G-Mail: <a href=""></a></li>
+                <li>LinkedIn: <a href=""></a></li>
+            </ul>
+        </section>
     </footer>
+    <script src="../scripts/script.js"></script>
  </body>
 </html>
