added more to the base, still no progress on the uhhhhhhh the uh the image carousel.

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -21,7 +21,27 @@
     </header>
 
     <main>
-
+        <section>
+            <p>ty SOOOOO MUCH</p>
+        </section>
+        <section>
+            <h1>
+                LinkedIn
+            </h2>
+            <p></p>
+        </section>
+        <section>
+            <h1>
+                G-mail
+            </h2>
+            <p></p>
+        </section>
+        <section>
+            <h1>
+                Phone Number
+            </h2>
+            <p></p>
+        </section>
     </main>
 
     <footer>
@@ -30,6 +50,7 @@
             <ul class="">
                 <li>G-Mail: <a href=""></a></li>
                 <li>LinkedIn: <a href=""></a></li>
+                <li>Phone Number: <a href=""></a></li>
             </ul>
         </section>
     </footer>
