--- a/HTML/about.html
+++ b/HTML/about.html
@@ -30,6 +30,7 @@
             <ul class="">
                 <li>G-Mail: <a href=""></a></li>
                 <li>LinkedIn: <a href=""></a></li>
+                <li>Phone Number: <a href=""></a></li>
             </ul>
         </section>
     </footer>
