--- a/HTML/delvehomes.html
+++ b/HTML/delvehomes.html
@@ -20,22 +20,24 @@
         </section>
     </header>
 
-    <main>
-        <a class="prev" onclick=""></a>
-        <div class="cContainer"> <!--cCountainer = Carousel Container. (c=Carousel)-->
-            <div class="cImg">
-                <img src="../images/39CUYMP8vJqHAYGVzUghBX.jpg">
+    <main>  
+        <section>
+            <div>
+                <div>
+
+                </div>
             </div>
-            <div class="cImg">
-                <img src="../images/maxresdefault.jpg">
-            </div>
-        </div>
-        <a class="next" onclick=""></a>
+        </section>
+
 
         <section>
             <p></p>
             <p></p>
         </section>
+
+        <button>
+            
+        </button>
     </main>
 
     <footer>
@@ -44,6 +46,7 @@
             <ul class="">
                 <li>G-Mail: <a href=""></a></li>
                 <li>LinkedIn: <a href=""></a></li>
+                <li>Phone Number: <a href=""></a></li>
             </ul>
         </section>
     </footer>
