--- a/HTML/index.html
+++ b/HTML/index.html
@@ -61,6 +61,7 @@
             <ul class="">
                 <li>G-Mail: <a href=""></a></li>
                 <li>LinkedIn: <a href=""></a></li>
+                <li>Phone Number: <a href=""></a></li>
             </ul>
         </section>
     </footer>
