Finished phishing page written content, delvehomes written content is almost done. Resume written content is pretty much done

--- a/HTML/delvehomes.html
+++ b/HTML/delvehomes.html
@@ -10,7 +10,7 @@
  <body>
     <header>
         <section>
-            <p></p>
+            <h1></h1>
         </section>
         <section>
             <a href="index.html">Home</a>
@@ -31,8 +31,8 @@
 
 
         <section>
-            <p></p>
-            <p></p>
+            <p>DelveHomes was a project that me and my partner Mason Peters did as a part of our web development class. We would create a website by hand for a fictitious home builder company. It was the first time that I would build a multi-page website, and it was the first time I used Github. First, we used Figma to create a layout for the pages, and created all the written content that would be in the slide. Then we both used Visual Studio Code to program the HTML and CSS, and we also used an extension to Visual Studio Code called “Live Server” which helped us view the changes we made to the code in real time. Building the site was quite difficult, and much of our code was inefficient and quite hard to work with, but nonetheless, me and my partner persevered and created a functional website. Collaborating and coding alongside a team member was very new, but me and Mason were quick to collaborate well with each other, and we completed everything as originally planned.</p>
+            <p>At the begining, we agreed to split the work among the two of us, Mason would work on the Amenities and Experience pages, while I would work on the Tour and Home pages. We would also work together to create the About page, which would be the most difficult page for us to create.</p>
         </section>
 
         <button>
