--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -10,7 +10,7 @@
  <body>
     <header>
         <section>
-            <p></p>
+            <h1></h1>
         </section>
         <section>
             <a href="index.html">Home</a>
@@ -21,7 +21,52 @@
     </header>
 
     <main>
- 
+        <h2>Resume</h2>
+        <h3>Education</h3>
+        <section>
+            <h4>Center for Advanced Research and Teechnology</h4>
+            <h5>Web Application Development Lab (Aug. 2022-Present)</h5>
+            <ul>
+
+            </ul>
+        </section>
+        <section>
+            <h4>Clovis Eart High School (Aug. 2020-Present)</h4>
+            <ul>
+
+            </ul>
+        </section>
+        <h3>Language</h3>
+        <section>
+            <h4>English</h4>
+            <ul>
+                <li>Speaks, writes, comprehends, and reads English</li>
+            </ul>
+            <h4>Hmong</h4>
+            <ul>
+                <li>Speaks, writes, comprehends, and reads basic Hmong</li>
+            </ul>
+        </section>
+        <h3>Technology</h3>
+        <section>
+            <h4>Coding</h4>
+            <ul>
+                <li>Knowledgable with HTML</li>
+                <li>Knowledgable with CSS</li>
+                <li>Knowledgable with JavaScript</li>
+            </ul>
+            <h4>Applications</h4>
+            <ul>
+                <li>Experienced with Github</li>
+                <li>Experienced with Visual Studio Code</li>
+                <li>Familiar with design tools such as Figma, Canva, and Lucidchart</li>
+            </ul>
+        </section>
+        <h5></h5>
+            <section>
+                <a>Resume PDF</a>
+                <a>Letter of Reccomendation</a>
+            </section>
     </main>
 
     <footer>
