finished delvehomes written content, worked a bit on contact page

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -22,7 +22,7 @@
 
     <main>
         <section>
-            <p>ty SOOOOO MUCH</p>
+            <p>Thank you for spending your time to look over my portfolio website.</p>
         </section>
         <section>
             <h2>
