added more image files

--- a/HTML/coursera.html
+++ b/HTML/coursera.html
@@ -22,7 +22,7 @@
 
     <main>
         <section>
-            <div>
+            <div class="cOntainer">
                 <div>
 
                 </div>
