preparing the carousel

--- a/HTML/delvehomes.html
+++ b/HTML/delvehomes.html
@@ -23,7 +23,7 @@
     <main>  
         <section>
             <div class="cOntainer">
-                <div>
+                <div class="delveHomesimg1" id="cIndex">
 
                 </div>
             </div>
