--- a/HTML/tariff.html
+++ b/HTML/tariff.html
@@ -23,7 +23,7 @@
     <main>
         <section>
             <div class="cOntainer">
-                <div>
+                <div class="tariffMonopoly1" id="cIndex">
 
                 </div>
             </div>
