worked on the image carousel algorithm. not completely finished yet, but I think i'm almost there

--- a/HTML/tariff.html
+++ b/HTML/tariff.html
@@ -22,11 +22,13 @@
 
     <main>
         <section>
+            <div onclick=""></div>
             <div class="cOntainer">
                 <div class="tariffMonopoly1" id="cIndex">
 
                 </div>
             </div>
+            <div onclick=""></div>
         </section>
 
 
