--- a/HTML/coursera.html
+++ b/HTML/coursera.html
@@ -22,11 +22,13 @@
 
     <main>
         <section>
+            <div onclick=""></div>
             <div class="cOntainer">
                 <div class="courseraimg1" id="cIndex">
 
                 </div>
             </div>
+            <div onclick=""></div>
         </section>
 
 
