--- a/HTML/tariff.html
+++ b/HTML/tariff.html
@@ -21,14 +21,12 @@
     </header>
 
     <main>
-        <section>
-            <div onclick=""></div>
+        <section class="imgCarousel row">
+            <div onclick="cDecrease()" class="dButton"></div>
             <div class="cOntainer">
-                <div class="tariffMonopoly1" id="cIndex">
-
-                </div>
+                <div class="tariffMonopoly1" id="cIndex"></div>
             </div>
-            <div onclick=""></div>
+            <div onclick="cIncrease()" class="iButton"></div>
         </section>
 
 
