--- a/HTML/coursera.html
+++ b/HTML/coursera.html
@@ -24,7 +24,7 @@
         <section class="imgCarousel row">
             <div onclick="cDecrease()" class="dButton"></div>
             <div class="cOntainer">
-                <div class="courseraimg1" id="cIndex"></div>
+                <div class="courseraImg1" id="cIndex"></div>
             </div>
             <div onclick="cIncrease()" class="iButton"></div>
         </section>
