removed nav bar and replaced it with a fulltscreen nav thingy with a button to open it

--- a/HTML/delvehomes.html
+++ b/HTML/delvehomes.html
@@ -9,15 +9,21 @@
 </head>
  <body>
     <header>
-        <section>
-            <h1></h1>
-        </section>
-        <section>
-            <a href="index.html">Home</a>
-            <p>About</p>
-            <p>Projects</p>
-            <a href="contact.html">Contact</a>
-        </section>
+        <span class="openButton" onclick="openNav()">☰ Open</span>
+
+        <div class="navOverlay" id="nav">
+            <a class="closeButton" onclick="closeNav()">X Close</a>
+            <div class="navContent">
+                <a href="index.html">Home</a>
+                <a href="about.html">About Me</a>
+                <a href="resume.html">Resume</a>
+                <a href="delvehomes.html">DelveHomes</a>
+                <a href="phishing.html">Phishing Awareness</a>
+                <a href="coursera.html">Coursera</a>
+                <a href="tariff.html">Tariff Monopoly</a>
+                <a href="contact.html">Contact</a>
+            </div>
+        </div>
     </header>
 
     <main>  
