added a smidge more to my resume

--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -68,11 +68,22 @@
                 <li>Familiar with design tools such as Figma, Canva, and Lucidchart</li>
             </ul>
         </section>
-        <h5></h5>
-            <section>
-                <a>Resume PDF</a>
-                <a>Letter of Reccomendation</a>
-            </section>
+        <h3>Other</h3>
+        <section>
+            <h4>Volunteer Work</h4>
+            <ul>
+                <li>Assisted keeping watch over toddlers at the daycare in Mountain View Church</li>
+            </ul>
+            <h4>Hobbies</h4>
+            <ul>
+                <li>Online gaming</li>
+                <li>Hiking on trails</li>
+            </ul>
+        </section>
+        <section>
+            <a>Resume PDF</a>
+            <a>Letter of Reccomendation</a>
+        </section>
     </main>
 
     <footer>
