small changes to carousel buttons

--- a/HTML/delvehomes.html
+++ b/HTML/delvehomes.html
@@ -28,11 +28,11 @@
 
     <main>  
         <section class="imgCarousel row">
-            <div onclick="cDecrease()" class="dButton"></div>
+            <a onclick="cDecrease()" class="dButton"><b>&lt;</b></a>
             <div class="cOntainer">
                 <div class="delveHomesImg1" id="cIndex"></div>
             </div>
-            <div onclick="cIncrease()" class="iButton"></div>
+            <a onclick="cIncrease()" class="iButton"><b>&gt;</b></a>
         </section>
 
 
