--- a/HTML/tariff.html
+++ b/HTML/tariff.html
@@ -28,16 +28,16 @@
 
     <main>
         <section class="imgCarousel row">
-            <div onclick="cDecrease()" class="dButton"></div>
+            <a onclick="cDecrease()" class="dButton"><b>&lt;</b></a>
             <div class="cOntainer">
                 <div class="tariffMonopoly1" id="cIndex"></div>
             </div>
-            <div onclick="cIncrease()" class="iButton"></div>
+            <a onclick="cIncrease()" class="iButton"><b>&gt;</b></a>
         </section>
 
 
         <section>
-            <p></p>
+            <P></p>
             <p></p>
         </section>
 
