fixed it for netlify

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <a class="closeButton" onclick="closeNav()">X Close</a>
             <div class="navContent">
                 <a href="index.html">Home</a>
-                <a href="about.html">About Me</a>
-                <a href="resume.html">Resume</a>
-                <a href="delvehomes.html">DelveHomes</a>
-                <a href="phishing.html">Phishing Awareness</a>
-                <a href="coursera.html">Coursera</a>
-                <a href="tariff.html">Tariff Monopoly</a>
-                <a href="contact.html">Contact</a>
+                <a href="HTML/about.html">About Me</a>
+                <a href="HTML/resume.html">Resume</a>
+                <a href="HTML/delvehomes.html">DelveHomes</a>
+                <a href="HTML/phishing.html">Phishing Awareness</a>
+                <a href="HTML/coursera.html">Coursera</a>
+                <a href="HTML/tariff.html">Tariff Monopoly</a>
+                <a href="HTML/contact.html">Contact</a>
             </div>
         </div>
     </header>
