--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -29,21 +29,24 @@
     <main>
         <h2>Resume</h2>
         <h3>Education</h3>
-        <section>
-            <h4>Center for Advanced Research and Teechnology</h4>
+        <section class="resumeSection">
+            <h4>Center for Advanced Research and Technology</h4>
             <h5>Web Application Development Lab (Aug. 2022-Present)</h5>
             <ul>
-
+                <li>Created several websites</li>
+                <li>Collaborated with classmates on multiple projects</li>
+                <li>Familiar with design tools such Figma, Canva, and LucidChart</li>
             </ul>
         </section>
-        <section>
+        <section class="resumeSection">
             <h4>Clovis Eart High School (Aug. 2020-Present)</h4>
             <ul>
-
+                <li>Took statistics in Junior year</li>
+                <li>Took Hmong for 3 years</li>
             </ul>
         </section>
         <h3>Language</h3>
-        <section>
+        <section class="resumeSection">
             <h4>English</h4>
             <ul>
                 <li>Speaks, writes, comprehends, and reads English</li>
@@ -54,7 +57,7 @@
             </ul>
         </section>
         <h3>Technology</h3>
-        <section>
+        <section class="resumeSection">
             <h4>Coding</h4>
             <ul>
                 <li>Knowledgable with HTML</li>
@@ -69,7 +72,7 @@
             </ul>
         </section>
         <h3>Other</h3>
-        <section>
+        <section class="resumeSection">
             <h4>Volunteer Work</h4>
             <ul>
                 <li>Assisted keeping watch over toddlers at the daycare in Mountain View Church</li>
@@ -80,7 +83,7 @@
                 <li>Hiking on trails</li>
             </ul>
         </section>
-        <section>
+        <section class="PDFsection">
             <a>Resume PDF</a>
             <a>Letter of Reccomendation</a>
         </section>
