--- a/HTML/tariff.html
+++ b/HTML/tariff.html
@@ -37,8 +37,8 @@
 
 
         <section>
-            <P></p>
-            <p></p>
+            <P>"Tariff" Monopoly was one of the largest projects that I had to work on. My group; Mason, Lucas and I, tried to remake Monopoly. However, this Monopoly would have a significant twist. There would be taxes! This would would our first time coding JavaScript in a sophisticated and extensive manner. We would have to use JavaScript to manipulate elements and variables to make the game come to life on the screen. We planned to make the game as a single page that's able to change from start screen, settings, and the game board one after another. Not only that, but we would also have to create art for the game as well.</p>
+            <p>Our first digital prototype of Tariff Monopoly was very much dysfunctional. The website lacked an incredible amount of visuals and the code was quite messy and hard to read. A lot of things were happening in the background that was just unable to be seen on the website. We decided to try again with our new-found knowledge. After restarting, we were able to breeze through making the starting-screen, settings, and game board. This allowed us to spend most of the time on JavaScript. Unfortunately, we were running low on time, and we tried our best to finish the game, but we were unable to create it as we had envisioned it.</p>
         </section>
 
         <button>
