added a butt ton of text

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -28,7 +28,7 @@
 
     <main>
         <section>
-            <p>Thank you for spending your time to look over my portfolio website.</p>
+            <p>Thank you for spending your time to look over my portfolio website. If you would like to contact me, then please use what I've provided below.</p>
         </section>
         <section>
             <h2>
