--- a/HTML/about.html
+++ b/HTML/about.html
@@ -25,12 +25,45 @@
         </div>
     </header>
 
-    <main>
-
+    <main class="sectionMain">
+        <section class="aboutContent">
+            <section class="aboutSection1" onclick="">
+                <h2 class="aboutHeader">About Me</h2>
+                <ul class="aboutList">
+                    <li>Mark Yang</li>
+                </ul>
+            </section>
+            <section class="aboutSection2" onclick="">
+                <h2 class="aboutHeader">Hobbies</h2>
+                <ul class="aboutList">
+                    <li>Hiking</li>
+                    <li>Gaming</li>
+                    <li>Music</li>
+                </ul>
+            </section>
+            <section class="aboutSection3" onclick="">
+                <h2 class="aboutHeader">Achievement</h2>
+                <ul class="aboutList">
+                    <li>Coursera</li>
+                </ul>
+            </section>
+            <section class="aboutSection4">
+                <div class="aboutImage" src=""></div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime eos nobis autem facilis voluptatibus repudiandae minima inventore. Reprehenderit id ab labore, fuga aspernatur porro perferendis, suscipit ipsa deleniti minima iste?</p>
+            </section>
+            <section class="aboutSection5">
+                <div class="aboutImage" src=""></div>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis tempora vero sit enim perspiciatis ipsa culpa adipisci non dolorem molestias animi mollitia, dolorum ipsam accusamus omnis quia corrupti. Voluptas, modi?</p>
+            </section>
+            <section class="aboutSection6">
+                <div class="aboutImage courseraImg1"></div>
+                <p>I completed a course on Coursera</p>
+            </section>
+        </section>
     </main>
 
-    <footer>
-        <section>
+    <!-- <footer>
+        <section class="footerContent">
             <p>contact</p>
             <ul class="">
                 <li>G-Mail: <a href=""></a></li>
@@ -38,6 +71,6 @@
                 <li>Phone Number: <a href=""></a></li>
             </ul>
         </section>
-    </footer>
+    </footer> -->
     <script src="../scripts/script.js"></script>
 </body>
