--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -26,12 +26,12 @@
     </header>
 
     <main>
-        <h2>Resume</h2>
+        <h2 class="resume">Resume</h2>
         <h3>Education</h3>
         <section class="resumeSection">
             <h4>Center for Advanced Research and Technology</h4>
             <h5>Web Application Development Lab (Aug. 2022-Present)</h5>
-            <ul>
+            <ul class="resumeList">
                 <li>Created several websites</li>
                 <li>Collaborated with classmates on multiple projects</li>
                 <li>Familiar with design tools such Figma, Canva, and LucidChart</li>
@@ -39,7 +39,7 @@
         </section>
         <section class="resumeSection">
             <h4>Clovis Eart High School (Aug. 2020-Present)</h4>
-            <ul>
+            <ul class="resumeList">
                 <li>Took statistics in Junior year</li>
                 <li>Took Hmong for 3 years</li>
             </ul>
@@ -47,24 +47,24 @@
         <h3>Language</h3>
         <section class="resumeSection">
             <h4>English</h4>
-            <ul>
+            <ul class="resumeList">
                 <li>Speaks, writes, comprehends, and reads English</li>
             </ul>
             <h4>Hmong</h4>
-            <ul>
+            <ul class="resumeList">
                 <li>Speaks, writes, comprehends, and reads basic Hmong</li>
             </ul>
         </section>
         <h3>Technology</h3>
         <section class="resumeSection">
             <h4>Coding</h4>
-            <ul>
+            <ul class="resumeList">
                 <li>Knowledgable with HTML</li>
                 <li>Knowledgable with CSS</li>
                 <li>Knowledgable with JavaScript</li>
             </ul>
             <h4>Applications</h4>
-            <ul>
+            <ul class="resumeList">
                 <li>Experienced with Github</li>
                 <li>Experienced with Visual Studio Code</li>
                 <li>Familiar with design tools such as Figma, Canva, and Lucidchart</li>
@@ -89,7 +89,7 @@
     </main>
 
     <footer>
-        <section>
+        <section class="footerContent">
             <p>contact</p>
             <ul class="">
                 <li>G-Mail: <a href=""></a></li>
