--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -50,7 +50,7 @@
     </main>
 
     <footer>
-        <section>
+        <section class="footerContent">
             <p>contact</p>
             <ul class="">
                 <li>G-Mail: <a href=""></a></li>
