--- a/HTML/tariff.html
+++ b/HTML/tariff.html
@@ -46,7 +46,7 @@
     </main>
 
     <footer>
-        <section>
+        <section class="footerContent">
             <p>contact</p>
             <ul class="">
                 <li>G-Mail: <a href=""></a></li>
