--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -26,26 +26,24 @@
     </header>
 
     <main>
-        <section>
+        <section class="pushinP">
             <p>Thank you for spending your time to look over my portfolio website. If you would like to contact me, then please use what I've provided below.</p>
         </section>
-        <section>
-            <h2>
-                LinkedIn
-            </h2>
-            <p></p>
+        <a  href="https://www.linkedin.com/in/mark-yang-bb9610275/">
+        <section class="pushinP">
+            <h2>LinkedIn</h2>
+            <p>Check out my newly created LinkedIn Profile</p>
         </section>
-        <section>
-            <h2>
-                G-mail
-            </h2>
-            <p></p>
+        </a>
+        <a href="mailto:mark.yang@cart.student.org">
+        <section class="pushinP">
+            <h2>G-mail</h2>
+            <p>If you need to contact me, do so with this</p>
         </section>
-        <section>
-            <h2>
-                Phone Number
-            </h2>
-            <p></p>
+        </a>
+        <section class="pushinP">
+            <h2>Phone Number</h2>
+            <p>Don't actually call me please</p>
         </section>
     </main>
 
@@ -53,9 +51,9 @@
         <section class="footerContent">
             <p>contact</p>
             <ul class="">
-                <li>G-Mail: <a href=""></a></li>
-                <li>LinkedIn: <a href=""></a></li>
-                <li>Phone Number: <a href=""></a></li>
+                <li>G-Mail: <a href="mailto:mark.yang@cart.student.org">mark.yang@cart.student.org</a></li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/mark-yang-bb9610275/">www.linkedin.com/in/mark-yang-bb9610275/</a></li>
+                <li>Phone Number: <a>559-720-5823</a></li>
             </ul>
         </section>
     </footer>
