--- a/HTML/coursera.html
+++ b/HTML/coursera.html
@@ -35,23 +35,19 @@
         </section>
 
 
-        <section>
+        <section class="projectText">
             <p>Coursera is a website that provides online courses for free. One of which, is a course for JavaScript, which I took. The course was by Meta, the same company that's creating the Metavers. The course was 5 weeks long total, and had several quizes that you are required to pass. There were also plenty of readings and videos that taught how JavaScript work. Each week would typically have a small project that had you work with JavaScript on hand. Each week would be checked off by my teacher once they saw that I had completed it. While doing this course, we were also completing other assignments aswell, so we would still be productive while we begun to learn how JavaScript work. Everybody was tasked to complete it, and the course was worth several points.</p>
             <p>This course helped me learn the basics of JavaScript. I learned what data types there were, how for and while loops work, how to create functions and variables, and many many more. I was able to create simple algorithms that were able to process simple variables. Later, I would learn how to construct loops and use them in practical situations, such as increasing a number value until a condition is met.I would also learn different data types and how they vary from each other, and how different operators functioned. I learned about arrays and objects and variables and how they store data and can be manipulated of changed accordingly too. In the end, I was able to pass the course without much trouble and with a 95.33% in accuracy.</p>
         </section>
-
-        <button>
-            
-        </button>
     </main>
 
     <footer>
         <section class="footerContent">
             <p>contact</p>
             <ul class="">
-                <li>G-Mail: <a href=""></a></li>
-                <li>LinkedIn: <a href=""></a></li>
-                <li>Phone Number: <a href=""></a></li>
+                <li>G-Mail: <a href="mailto:mark.yang@cart.student.org">mark.yang@cart.student.org</a></li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/mark-yang-bb9610275/">www.linkedin.com/in/mark-yang-bb9610275/</a></li>
+                <li>Phone Number: <a>559-720-5823</a></li>
             </ul>
         </section>
     </footer>
