--- a/HTML/about.html
+++ b/HTML/about.html
@@ -26,51 +26,18 @@
     </header>
 
     <main class="sectionMain">
-        <section class="aboutContent">
-            <section class="aboutSection1" onclick="">
-                <h2 class="aboutHeader">About Me</h2>
-                <ul class="aboutList">
-                    <li>Mark Yang</li>
-                </ul>
-            </section>
-            <section class="aboutSection2" onclick="">
-                <h2 class="aboutHeader">Hobbies</h2>
-                <ul class="aboutList">
-                    <li>Hiking</li>
-                    <li>Gaming</li>
-                    <li>Music</li>
-                </ul>
-            </section>
-            <section class="aboutSection3" onclick="">
-                <h2 class="aboutHeader">Achievement</h2>
-                <ul class="aboutList">
-                    <li>Coursera</li>
-                </ul>
-            </section>
-            <section class="aboutSection4">
-                <div class="aboutImage" src=""></div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime eos nobis autem facilis voluptatibus repudiandae minima inventore. Reprehenderit id ab labore, fuga aspernatur porro perferendis, suscipit ipsa deleniti minima iste?</p>
-            </section>
-            <section class="aboutSection5">
-                <div class="aboutImage" src=""></div>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis tempora vero sit enim perspiciatis ipsa culpa adipisci non dolorem molestias animi mollitia, dolorum ipsam accusamus omnis quia corrupti. Voluptas, modi?</p>
-            </section>
-            <section class="aboutSection6">
-                <div class="aboutImage courseraImg1"></div>
-                <p>I completed a course on Coursera</p>
-            </section>
-        </section>
+
     </main>
 
-    <!-- <footer>
+    <footer>
         <section class="footerContent">
             <p>contact</p>
             <ul class="">
-                <li>G-Mail: <a href=""></a></li>
-                <li>LinkedIn: <a href=""></a></li>
-                <li>Phone Number: <a href=""></a></li>
+                <li>G-Mail: <a href="mailto:mark.yang@cart.student.org">mark.yang@cart.student.org</a></li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/mark-yang-bb9610275/">www.linkedin.com/in/mark-yang-bb9610275/</a></li>
+                <li>Phone Number: <a>559-720-5823</a></li>
             </ul>
         </section>
-    </footer> -->
+    </footer>
     <script src="../scripts/script.js"></script>
 </body>
