--- a/HTML/delvehomes.html
+++ b/HTML/delvehomes.html
@@ -35,23 +35,19 @@
         </section>
 
 
-        <section>
+        <section class="projectText">
             <p>DelveHomes was a project that me and my partner Mason Peters did as a part of our web development class. We would create a website by hand for a fictitious home builder company. It was the first time that I would build a multi-page website, and it was the first time I used Github. First, we used Figma to create a layout for the pages, and created all the written content that would be in the slide. Then we both used Visual Studio Code to program the HTML and CSS, and we also used an extension to Visual Studio Code called “Live Server” which helped us view the changes we made to the code in real time. Collaborating and coding alongside a team member was very new, but me and Mason were quick to collaborate well with each other, and we completed everything as originally planned.</p>
             <p>At the begining, we agreed to split the work among the two of us, Mason would work on the Amenities and Experience pages, while I would work on the Tour and Home pages. We would also work together to create the About page, which would be the most difficult page for us to create. When we begun, I created almost all of the written content while mason tried doing some work on the HTML. After I finished, I started working on my pages. At the time, we had very little experience with using flexboxes, so trying to wrap our head around how it worked would take us a while to figure out. But by the end of the project, both Mason and I became much more proficient and familiar with the use of flexboxes, and were able to design our pages like how we originally planned them to be.</p>
         </section>
-
-        <button>
-            
-        </button>
     </main>
 
     <footer>
         <section class="footerContent">
             <p>contact</p>
             <ul class="">
-                <li>G-Mail: <a href=""></a></li>
-                <li>LinkedIn: <a href=""></a></li>
-                <li>Phone Number: <a href=""></a></li>
+                <li>G-Mail: <a href="mailto:mark.yang@cart.student.org">mark.yang@cart.student.org</a></li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/mark-yang-bb9610275/">www.linkedin.com/in/mark-yang-bb9610275/</a></li>
+                <li>Phone Number: <a>559-720-5823</a></li>
             </ul>
         </section>
     </footer>
