made the images into portals

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             <section class="haf">
                 <section class="quadrant">
                     <div class="imgContainer">
-                        <img src="../images/DelveHomes1.jpeg">
+                        <a href="HTML/delvehomes.html">
+                            <img  src="../images/DelveHomes1.jpeg">
+                        </a>
                     </div>
                     <article class="txtContainer">
                         <h3>DelveHomes</h3>
@@ -45,7 +47,9 @@
                 </section>
                 <section class="quadrant">
                     <div class="imgContainer">
-                        <img src="../images/Phishing1.jpeg">
+                        <a href="HTML/phishing.html">
+                            <img src="../images/Phishing1.jpeg">
+                        </a>
                     </div>
                     <article class="txtContainer">
                         <h3>Phishing Awareness</h3>
@@ -56,7 +60,9 @@
             <section class="haf">
                 <section class="quadrant">
                     <div class="imgContainer">
-                        <img src="../images/Coursera1.jpeg">
+                        <a href="HTML/coursera.html">
+                            <img src="../images/Coursera1.jpeg">
+                        </a>
                     </div>
                     <article class="txtContainer">
                         <h3>Coursera</h3>
@@ -65,7 +71,9 @@
                 </section>
                 <section class="quadrant">
                     <div class="imgContainer">
-                        <img src="../images/TariffMonopoly1.jpeg">
+                        <a href="HTML/tariff.html">
+                            <img  src="../images/TariffMonopoly1.jpeg">
+                        </a>
                     </div>
                     <article class="txtContainer">
                         <h3>Tariff Monopoly</h3>
