--- a/HTML/about.html
+++ b/HTML/about.html
@@ -26,56 +26,43 @@
     </header>
 
     <main>
-
-    <main class="sectionMain">
         <section class="aboutContent">
-            <section class="aboutSection1" onclick="">
-                <h2 class="aboutHeader">About Me</h2>
-                <ul class="aboutList">
-                    <li>Mark Yang</li>
-                </ul>
+            <section class="aboutRow">
+                <section class="aboutLeft">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum vel esse molestiae cumque et recusandae temporibus nihil ad incidunt est? Modi, libero! Adipisci repellat numquam mollitia, ut ipsum voluptate nemo?</p>
+                </section>
+                <section class="aboutRight1">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis ea ab soluta dolor in temporibus mollitia. Natus, vero. Est alias vero voluptate velit cumque a eveniet autem quas deleniti non?</p>
+                </section>
             </section>
-            <section class="aboutSection2" onclick="">
-                <h2 class="aboutHeader">Hobbies</h2>
-                <ul class="aboutList">
-                    <li>Hiking</li>
-                    <li>Gaming</li>
-                    <li>Music</li>
-                </ul>
+            <section class="aboutRow">
+                <section class="aboutLeft">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium harum fugit quo eligendi sed fugiat repudiandae animi sapiente, commodi tenetur ex corrupti et blanditiis adipisci asperiores quis cumque, eaque omnis!</p>
+                </section>
+                <section class="aboutRight2">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, autem sunt molestiae facilis ullam doloribus ducimus maxime eos ipsa minus quidem sed neque harum sit corporis! Cupiditate quibusdam ratione in?</p>
+                </section>
             </section>
-            <section class="aboutSection3" onclick="">
-                <h2 class="aboutHeader">Achievement</h2>
-                <ul class="aboutList">
-                    <li>Coursera</li>
-                </ul>
-            </section>
-            <section class="aboutSection4">
-                <div class="aboutImage" src=""></div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime eos nobis autem facilis voluptatibus repudiandae minima inventore. Reprehenderit id ab labore, fuga aspernatur porro perferendis, suscipit ipsa deleniti minima iste?</p>
-            </section>
-            <section class="aboutSection5">
-                <div class="aboutImage" src=""></div>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis tempora vero sit enim perspiciatis ipsa culpa adipisci non dolorem molestias animi mollitia, dolorum ipsam accusamus omnis quia corrupti. Voluptas, modi?</p>
-            </section>
-            <section class="aboutSection6">
-                <div class="aboutImage courseraImg1"></div>
-                <p>I completed a course on Coursera</p>
+            <section class="aboutRow">
+                <section class="aboutLeft">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, nihil! A nam soluta fugit praesentium optio eum earum nesciunt deserunt aspernatur nemo tempore quasi qui totam, voluptates neque. Deleniti, quae!</p>
+                </section>
+                <section class="aboutRight3">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa quae tenetur, in dignissimos deleniti eaque dolor fugit, optio laudantium animi veniam quasi! Quos non corrupti labore voluptate consequuntur pariatur atque!</p>
+                </section>
             </section>
         </section>
     </main>
 
     <footer>
-        <section>
-    <!-- <footer>
         <section class="footerContent">
             <p>contact</p>
             <ul class="">
-                <li>G-Mail: <a href=""></a></li>
-                <li>LinkedIn: <a href=""></a></li>
-                <li>Phone Number: <a href=""></a></li>
+                <li>G-Mail: <a href="mailto:mark.yang@cart.student.org">mark.yang@cart.student.org</a></li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/mark-yang-bb9610275/">www.linkedin.com/in/mark-yang-bb9610275/</a></li>
+                <li>Phone Number: <a>559-720-5823</a></li>
             </ul>
         </section>
     </footer>
-    </footer> -->
     <script src="../scripts/script.js"></script>
 </body>
