--- a/HTML/resume.html
+++ b/HTML/resume.html
@@ -27,64 +27,62 @@
 
     <main>
         <h2 class="resume">Resume</h2>
-        <h3>Education</h3>
-        <section class="resumeSection">
-            <h4>Center for Advanced Research and Technology</h4>
-            <h5>Web Application Development Lab (Aug. 2022-Present)</h5>
-            <ul class="resumeList">
-                <li>Created several websites</li>
-                <li>Collaborated with classmates on multiple projects</li>
-                <li>Familiar with design tools such Figma, Canva, and LucidChart</li>
-            </ul>
+        <section class="resumeContent">
+            <h3>Education</h3>
+            <section class="resumeSection">
+                <h4>Center for Advanced Research and Technology</h4>
+                <h5>Web Application Development Lab (Aug. 2022-Present)</h5>
+                <ul class="resumeList">
+                    <li>Created several websites</li>
+                    <li>Collaborated with classmates on multiple projects</li>
+                </ul>
+            </section>
+            <section class="resumeSection">
+                <h4>Clovis Eart High School (Aug. 2020-Present)</h4>
+                <ul class="resumeList">
+                    <li>Took statistics in Junior year</li>
+                    <li>Took Hmong for 3 years</li>
+                </ul>
+            </section>
+            <h3>Language</h3>
+            <section class="resumeSection">
+                <h4>English</h4>
+                <ul class="resumeList">
+                    <li>Speaks, writes, comprehends, and reads English</li>
+                </ul>
+                <h4>Hmong</h4>
+                <ul class="resumeList">
+                    <li>Speaks, writes, comprehends, and reads basic Hmong</li>
+                </ul>
+            </section>
+            <h3>Technology</h3>
+            <section class="resumeSection">
+                <h4>Coding</h4>
+                <ul class="resumeList">
+                    <li>Knowledgable with programming HTML</li>
+                    <li>Knowledgable with programming CSS</li>
+                    <li>Knowledgable with programming JavaScript</li>
+                </ul>
+                <h4>Applications</h4>
+                <ul class="resumeList">
+                    <li>Experienced with Github</li>
+                    <li>Experienced with Visual Studio Code</li>
+                    <li>Familiar with design tools such as Figma, Canva, and Lucidchart</li>
+                </ul>
+            </section>
+            <h3>Other</h3>
+            <section class="resumeSection">
+                <h4>Volunteer Work</h4>
+                <ul class="resumeList">
+                    <li>Assisted keeping watch over toddlers at the daycare in Mountain View Church</li>
+                </ul>
+            </section>
         </section>
-        <section class="resumeSection">
-            <h4>Clovis Eart High School (Aug. 2020-Present)</h4>
-            <ul class="resumeList">
-                <li>Took statistics in Junior year</li>
-                <li>Took Hmong for 3 years</li>
-            </ul>
-        </section>
-        <h3>Language</h3>
-        <section class="resumeSection">
-            <h4>English</h4>
-            <ul class="resumeList">
-                <li>Speaks, writes, comprehends, and reads English</li>
-            </ul>
-            <h4>Hmong</h4>
-            <ul class="resumeList">
-                <li>Speaks, writes, comprehends, and reads basic Hmong</li>
-            </ul>
-        </section>
-        <h3>Technology</h3>
-        <section class="resumeSection">
-            <h4>Coding</h4>
-            <ul class="resumeList">
-                <li>Knowledgable with HTML</li>
-                <li>Knowledgable with CSS</li>
-                <li>Knowledgable with JavaScript</li>
-            </ul>
-            <h4>Applications</h4>
-            <ul class="resumeList">
-                <li>Experienced with Github</li>
-                <li>Experienced with Visual Studio Code</li>
-                <li>Familiar with design tools such as Figma, Canva, and Lucidchart</li>
-            </ul>
-        </section>
-        <h3>Other</h3>
-        <section class="resumeSection">
-            <h4>Volunteer Work</h4>
-            <ul>
-                <li>Assisted keeping watch over toddlers at the daycare in Mountain View Church</li>
-            </ul>
-            <h4>Hobbies</h4>
-            <ul>
-                <li>Online gaming</li>
-                <li>Hiking on trails</li>
-            </ul>
-        </section>
-        <section class="PDFsection">
-            <a>Resume PDF</a>
-            <a>Letter of Reccomendation</a>
+        <section class="PDFcontainer">
+            <section class="PDFsection">
+                <a class="PDFthingy" href="../  imagesMarkYangPortfoliolio.pdf">Resume    PDF<a>
+                <a class="PDFthingy " href="">Letterof   Reccomendation</a>
+            </section> 
         </section>
     </main>
 
