--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
     
     <main>
         <section class="heroSection">
-            <div class="me"></div>
+            <section class="meme">
+                    <section class="meTextContainer">
+                        <h1 class="meText">Mark Yang <br>Web Developer</h1>
+                    </section>
+                    
+                <div class="me"></div>
+            </section>
             <p>My name is Mark Yang, and, as of writing this, I am a student at CART. I am currently taking the Web Application Development class. This year, I’ve learned a significant amount about HTML, CSS, and JavaScript. I’ve created multiple websites from scratch using Visual Studio Code, and use Github to manage projects (including this one). If you would like to view my previous projects, you can find them below.</p>
         </section>
 
